--- a/src/main/gui/performers/performers.css
+++ b/src/main/gui/performers/performers.css
@@ -24,12 +24,15 @@
   font-weight: 600;
   color: darkorange;
   text-align: left;
-  width: 80%;
-  font-family: cursive;
+  width: 40%;
 }
 
-.display.highlighted {
-  color: darkgreen
+.ipa {
+  font-size: 2.2rem;
+  font-weight: 600;
+  color: darkorange;
+  text-align: left;
+  width: 40%;
 }
 
 .score {
@@ -37,3 +40,8 @@
   font-size: 1.8rem;
   width: 20%;
 }
+
+.performer-row .highlighted {
+  color: darkgreen
+}
+
