--- a/src/main/gui/styles.css
+++ b/src/main/gui/styles.css
@@ -43,6 +43,10 @@ input {
   justify-content: flex-start;
 }
 
+.message {
+  font-size: 2.5rem;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     /* display: none; <- Crashes Chrome on hover */
