--- a/src/main/gui/styles.css
+++ b/src/main/gui/styles.css
@@ -2,7 +2,6 @@
 body {
   padding: 3rem;
   font-size: 10px;
-  --organic-font: 'Caveat Brush', cursive;
   --main-font: 'Droid Sans', sans-serif;
   font-family: var(--main-font);
 }
@@ -21,7 +20,7 @@ input {
   height: 2.2rem;
   width: 20rem;
   font-size: 2rem;
-  font-family: var(--main-font);;
+  font-family: var(--main-font);
   font-weight: 500;
 }
 
@@ -45,6 +44,14 @@ input {
 
 .message {
   font-size: 2.5rem;
+}
+
+.my-row {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 input::-webkit-outer-spin-button,
